--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -1,3 +1,15 @@
-.btn {
-	color: #fff;
+/*// ==========================================================================
+// c-btn
+// ==========================================================================*/
+
+.c-top-entryBtn {
+  width: 70%;
+  text-align: center;
+  color: white;
+  background-color: #383434;
+  padding: 15px 30px;
+  border-radius: 30px;
+  font-size: 25px;
+  letter-spacing: 2px;
+  box-shadow: 0 5px 3px 0 rgba(0, 0, 0, .5);
 }
