--- a/src/ejs/template/_header.ejs
+++ b/src/ejs/template/_header.ejs
@@ -1,8 +1,7 @@
 <% var img_path='/assets/images/'; %>
-<header>
-  <div class = "header-main">
-    <div class = "header-logo">
-      <img src="<%= img_path %>trust.png" class ="logo-image">
-    </div>
+
+<header class="l-header">
+  <div class="c-header-logo">
+    <img src="<%= img_path %>trust.png" class="c-header-logo__img">
   </div>
 </header>
