--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -112,7 +112,7 @@
 }
 
 /*// -----------------------------------------------------------------
-//  .p-top-container
+// .p-top-container
 // -----------------------------------------------------------------*/
 
 .p-top-container {
@@ -122,7 +122,7 @@
 }
 
 /*// -----------------------------------------------------------------
-//  .p-top-project
+// .p-top-project
 // -----------------------------------------------------------------*/
 
 .p-top-project {
@@ -130,7 +130,7 @@
 }
 
 /*// -----------------------------------------------------------------
-//  .p-top-project__heading
+// .p-top-project__heading
 // -----------------------------------------------------------------*/
 
 .p-top-project__heading {
@@ -141,13 +141,13 @@
   font-weight: bold;
   text-align: center;
   &::before, &:after {
-    position: absolute;
-    display: block;
-    width: 1000px;
-    height: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    content: '';
+  position: absolute;
+  display: block;
+  width: 1000px;
+  height: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  content: '';
   }
   &::before {
     top: 0;
@@ -167,8 +167,46 @@
   color: #2582bb;
 }
 
+.fadeInDown {
+  -webkit-animation-fill-mode:both;
+  -ms-animation-fill-mode:both;
+  animation-fill-mode:both;
+  -webkit-animation-duration:1.5s;
+  -ms-animation-duration:1.5s;
+  animation-duration:1.5s;
+  -webkit-animation-name: fadeInDown;
+  animation-name: fadeInDown;
+  visibility: visible !important;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
 /*// -----------------------------------------------------------------
-//  .p-top-project__list
+// .p-top-project__list
 // -----------------------------------------------------------------*/
 
 .p-top-project__list {
@@ -208,12 +246,12 @@
 }
 
 /*// -----------------------------------------------------------------
-//  .p-top-trouble
+// .p-top-trouble
 // -----------------------------------------------------------------*/
 
 .p-top-trouble__heading {
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   padding-bottom: 10px;
   font-size: 30px;
   font-weight: bold;
