Modified bgimage animation of aboutServive_block

--- a/src/scss/layout/_top.scss
+++ b/src/scss/layout/_top.scss
@@ -7,7 +7,6 @@
   background: url("#{$bgPath}heading.bg1.png");
   background-size: cover;
   padding: 0 30px;
-
   display: flex;
   align-items: center;
 }
@@ -15,4 +14,15 @@
 .l-top-aboutService {
   display: flex;
   padding: 20px 0 50px 100px;
+  background: url('#{$bgPath}bg-trust-logo.png') no-repeat;
+  background-color:rgba(255,255,255,0.9); // 背景画像のみ薄く（IE,Edge　未対応）
+  background-blend-mode: lighten; // 背景画像のみ薄く（IE,Edge　未対応）
+  background-size: 42%;
+}
+
+//　だんだん大きく濃くな〜る
+.toDarkBgColor {
+  transition: 3.0s;
+  background-color:rgba(255,255,255,0.5);
+  background-size: 45%;
 }
