--- a/src/ejs/template/_header.ejs
+++ b/src/ejs/template/_header.ejs
@@ -1,7 +1,7 @@
 <% var img_path='/assets/images/'; %>
 
-<header class="l-header">
+<header class="l-header" id="header">
   <div class="c-header-logo">
-    <img src="<%= img_path %>trust.png" class="c-header-logo__img">
+    <img src="<%= img_path %>trust.png">
   </div>
 </header>
