--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -2,7 +2,7 @@
 // c-btn
 // ==========================================================================*/
 
-.c-top-entryBtn {
+.c-top-toProject {
   color: white;
   padding: 15px 80px;
   border-radius: 30px;
@@ -16,5 +16,10 @@
 
   &:hover {
     transform: scale(1.05);
+  }
+
+  @include mq('u-sp') {
+    font-size: 20px;
+    padding: 10px 40px;
   }
 }
