--- a/src/scss/object/component/_header.scss
+++ b/src/scss/object/component/_header.scss
@@ -9,11 +9,6 @@
 
 .c-header-logo {
   margin : 0 auto;
-  width: 200px;
+  width: 9%;
   line-height: 75px;
-}
-
-.c-header-logo__img {
-  height :50px;
-  width :190px;
 }
