--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -7,305 +7,113 @@
 // -----------------------------------------------------------------*/
 
 .p-top-heading__block {
-  margin-left: auto;
   width: 40%;
   text-align: center;
+
+  @include mq('u-sp') {
+    width: 90%;
+    margin-top: 100px;
+  }
 }
 
-.p-top-heading__title {
+.p-top-heading__catchPhrase {
+  // font-family: Source Han Code JP;
   font-size: 60px;
-  font-weight: bold;
-  letter-spacing: 5px;
-  color: white;
-  text-shadow: 1px 2px 3px #808080;
-  margin-bottom: 50px;
-  text-align: left;
+
+  @include mq('u-sp') {
+    font-size: 35px;
+  }
 }
 
-.p-top-heading__title--red {
-  color: #d9340a;
-}
+.p-top-heading__text {
+  font-size: 20px;
+  margin-bottom: 20px;
 
-.p-top-heading__title--blue {
-  color: #2582bb;
+  @include mq('u-sp') {
+    font-size: 15px;
+  }
 }
 
 /*// -----------------------------------------------------------------
 //  .p-top-aboutService
 // -----------------------------------------------------------------*/
 
-.p-top-aboutService__logoList {
-  font-size: 80px;
-  line-height: 180px;
-  font-weight: bold;
-  overflow: hidden; // ロゴのfadeinを隠すため
-  letter-spacing: 20px;
+.p-top-request__title {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 30px;
 
-  // TTJ の (最初の) T
-  &:first-child > .p-top-aboutService__logoList__initial {
-    color: #d9340a;
-  }
-
-  // TTJ の (2番目の) T
-  &:nth-child(2) > .p-top-aboutService__logoList__initial {
-    color: #2582bb;
+  @include mq('u-sp') {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    font-size: 20px;
   }
 }
 
-.p-top-aboutService__logoList__initial {
-  position: relative;
-  right: 250px;
-  font-size: 180px;
-  opacity: 0;
-}
-
-// ロゴのフェードイン
-.fadeLogoInitial {
-  opacity: 1;
-  right: 0;
-  transition: 1.5s;
-}
-
-.p-top-aboutService__explain {
-  background-color: #343434;
-  color: white;
-  height: 370px;
-  width: 65%;
-  margin-left: auto;
-  padding: 10px 10px 10px 80px;
-  position: relative;
-}
-
-.p-top-aboutService__explain__title {
-  font-size: 80px;
-  font-weight: bold;
-  text-align: right;
-}
-
-.p-top-aboutService__explain__titleInitial {
-  letter-spacing: -10px;
-
-  &:first-child {
-    color: #d9340a;
-  }
-
-  &:nth-child(2) {
-    color: #2582bb;
-  }
-}
-
-.p-top-aboutService__explain__underline {
-  display: block;
-  position: absolute;
-  right: 0;
-  height: 2px;
-  width: 0;
-  background-color: white;
-}
-
-.extendUnderline {
-  width: 70%;
-  transition: 2.0s;
-}
-
-.p-top-aboutService__explain__text {
-  margin-top: 30px;
-}
-
-/*// -----------------------------------------------------------------
-// .p-top-container
-// -----------------------------------------------------------------*/
-
-.p-top-container {
-  width: 1200px;
+.p-top-request__block {
+  width: 80%;
   margin: 0 auto;
-  padding: 20px 20px;
-}
-
-/*// -----------------------------------------------------------------
-// .p-top-project
-// -----------------------------------------------------------------*/
-
-.p-top-project {
-  margin-bottom: 100px;
-}
-
-/*// -----------------------------------------------------------------
-// .p-top-project__heading
-// -----------------------------------------------------------------*/
-
-.p-top-project__heading {
-  position: relative;
-  margin-bottom: 30px;
-  padding: 20px 0;
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  &::before, &:after {
-  position: absolute;
-  display: block;
-  width: 1000px;
-  height: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  content: '';
-  }
-  &::before {
-    top: 0;
-    background: linear-gradient(to right, #D9340A, #fff 50%, #2582bb);
-  }
-  &::after {
-    bottom: 0;
-    background: linear-gradient(to right, #2582bb, #fff 50%, #D9340A);
-  }
-}
-
-.p-top-project__heading--red {
-  color: #D9340A;
-}
-
-.p-top-project__heading--blue {
-  color: #2582bb;
-}
-
-.fadeInDown {
-  -webkit-animation-fill-mode:both;
-  -ms-animation-fill-mode:both;
-  animation-fill-mode:both;
-  -webkit-animation-duration:1.5s;
-  -ms-animation-duration:1.5s;
-  animation-duration:1.5s;
-  -webkit-animation-name: fadeInDown;
-  animation-name: fadeInDown;
-  visibility: visible !important;
-}
-
-@-webkit-keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-  }
-}
-
-@keyframes fadeInDown {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-
-/*// -----------------------------------------------------------------
-// .p-top-project__list
-// -----------------------------------------------------------------*/
-
-.p-top-project__list {
   display: flex;
-  justify-content: center;
-}
+  justify-content: space-between;
 
-.p-top-project__list__link {
-  &:hover {
-    transform: scale(1.05);
-    transition: all 300ms 0s ease;
-    opacity: .6;
-  }
-  &:nth-last-child(n+2) {
-    margin-right: 10px;
+  @include mq('u-sp') {
+    flex-direction: column;
   }
 }
 
-.p-top-project__list__item {
-  padding-bottom: 100px;
-  border: 1px solid;
-}
+.p-top-request__blockList {
+  width: 30%;
+  background: linear-gradient(white, #e4e4e4);
+  border-radius: 40px;
+  padding: 20px 30px;
 
-.p-top-project__list__item__title {
-  display: block;
-  padding: 10px 20px;
-  background-color: rgba(#808080, 0.3);
-}
+  @include mq('u-sp') {
+    width: 100%;
 
-.p-top-project__list__item__about {
-  padding: 10px 20px;
-  border-bottom: 1px solid #000;
-}
-
-.p-top-project__list__item__development {
-  padding: 10px 20px;
-}
-
-/*// -----------------------------------------------------------------
-// .p-top-trouble
-// -----------------------------------------------------------------*/
-
-.p-top-trouble__heading {
-  position: relative;
-  margin-bottom: 30px;
-  padding-bottom: 10px;
-  font-size: 30px;
-  font-weight: bold;
-  letter-spacing: 6px;
-  text-align: center;
-  &::after {
-    position: absolute;
-    display: block;
-    left: 50%;
-    bottom: 0;
-    width: 35%;
-    height: 5px;
-    background: linear-gradient(to right, #D9340A, #fff 50%, #2582bb);
-    transform: translateX(-50%);
-    content: '';
-  }
-}
-
-.p-top-trouble__list {
-  display: flex;
-  justify-content: center;
-}
-
-.p-top-trouble__listItem {
-  width: calc((100% - 100px) / 3);
-  border-radius: 0 0 15px 15px;
-  text-align: center;
-  &:first-child {
-    .p-top-trouble__listItem__inner__troubleType--detail {
-      padding-bottom: 25px;
+    &:not(last-child) {
+      margin-bottom: 30px;
     }
   }
-  &:nth-last-child(n+2) {
-    margin-right: 10px;
+}
+
+@mixin request_blockList_underLine {
+  content: '';
+  height: 3px;
+  width: 30%;
+  background-color: gray;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.p-top-request__blockList__title {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 30px;
+  position: relative;
+
+  &:after {
+    @include request_blockList_underLine;
+
+    bottom: -5px;
   }
 }
 
-.p-top-trouble__listItem__inner {
-  background-color: #EFEFEF;
+.p-top-request__blockList__img {
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+  display: block;
+  margin-bottom: 40px;
 }
 
-.p-top-trouble__listItem__inner__img {
-  border-radius: 15px;
-}
+.p-top-request__blockList__text {
+  position: relative;
 
-.p-top-trouble__listItem__inner__troubleType {
-  padding: 20px 0;
-  font-size: 20px;
-  border-radius:0 0 15px 15px;
-  background-color: #EFEFEF;
-}
+  &:after {
+    @include request_blockList_underLine;
 
-.p-top-trouble__listItem__inner__troubleType--detail {
-  color: #fff;
-  background-color: #343434;
+    top: -20px;
+  }
 }
